shakedown ongoing notes/issues/OKG4Test_direct_two_executable_shakedown.rst fixed badflags, CPUindexing, some progress with hits

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -30,6 +30,9 @@ set(SOURCES
     C4Cerenkov1042.cc
     CPhysicsList.cc 
 
+    CHit.cc
+    CSensitiveDetector.cc 
+
 
     Cerenkov.cc
     OpRayleigh.cc
@@ -145,6 +148,10 @@ set(HEADERS
     G4Cerenkov1042.hh
     C4Cerenkov1042.hh
     CPhysicsList.hh
+
+    CHit.hh
+    CSensitiveDetector.hh
+
 
     Cerenkov.hh
     OpRayleigh.hh
