notes/issues/CMake_OptiXRap_Config_Fixed.rst twas OptiX was preceeded by nothing, it must come after OKConf directly or indirectly + fix OptiXRap warnings

--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -3,9 +3,14 @@ set(name OptiXRap)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)   
 
+find_package(OKConf     REQUIRED CONFIG)  
+
+set(OptiX_VERBOSE ON)
 find_package(OptiX      REQUIRED MODULE)   
+
 find_package(OpticksGeo REQUIRED CONFIG)
 find_package(ThrustRap  REQUIRED CONFIG )
+
 
 set(SOURCES
      
