debugging loss of sensor surfaces in the X4 converted geometry

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SOURCES
 
     X4Gen.cc
     X4.cc
+    X4Named.cc
     X4Entity.cc
     X4SolidBase.cc
     X4Solid.cc
@@ -75,6 +76,7 @@ set(HEADERS
 
     X4Gen.hh
     X4.hh
+    X4Named.hh
     X4Entity.hh
     X4SolidBase.hh
     X4Solid.hh
