more MPT accessor updating in CFG4

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ set(TEST_SOURCES
     CVecTest.cc
 
     G4MaterialPropertiesTableTest.cc
+    CMPTTest.cc
 
     G4UniformRandTest.cc
     G4BoxTest.cc
