following brief OK-vs-OK comparison in abe- decide must start first on G4-vs-G4, add G4 hit collection in NPY using CPhotonCollector to start this

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -113,6 +113,7 @@ set(SOURCES
     CCollector.cc
     CPrimarySource.cc
     CPrimaryCollector.cc
+    CPhotonCollector.cc
     CRunAction.cc
     CEventAction.cc
 
@@ -219,6 +220,7 @@ set(HEADERS
     CCollector.hh
     CPrimarySource.hh
     CPrimaryCollector.hh
+    CPhotonCollector.hh
     CRunAction.hh
     CEventAction.hh
 )
