--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ set(TEST_SOURCES
     OpticksEventAnaTest.cc
     OpticksEventCompareTest.cc
     OpticksEventDumpTest.cc
+    OpticksGenstepTest.cc 
 
 )
 
