CAlignEngine for managing multiple pre-cooked random number streams with cursors for each stream, unlike CRandomEngine

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -124,6 +124,7 @@ set(SOURCES
 
     CRandomEngine.cc
     CRandomListener.cc
+    CAlignEngine.cc
     CMixMaxRng.cc
 
     CProcess.cc
@@ -238,6 +239,7 @@ set(HEADERS
     CEventAction.hh
 
     CRandomEngine.hh
+    CAlignEngine.hh
     CRandomListener.hh
     CMixMaxRng.hh
 
