getting the CerenkovMinimal photons to stay in their record groove aligned streams thru generation and propagation

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -27,7 +27,7 @@ set(TEST_SOURCES
     G4UniformRandTest.cc
     G4BoxTest.cc
     G4ThreeVectorTest.cc
-    CCollectorTest.cc
+    CGenstepCollectorTest.cc
     CInterpolationTest.cc
     OpRayleighTest.cc 
     CGROUPVELTest.cc 
