rng.cu : standalone curand generator, thinking about incorporating something similar within a HepRandom engine to avoid copying randoms around

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -25,6 +25,8 @@ set(TEST_SOURCES
     CMPTTest.cc
 
     G4UniformRandTest.cc
+    EngineTest.cc
+
     G4BoxTest.cc
     G4ThreeVectorTest.cc
     CGenstepCollectorTest.cc
