tidy some example code

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ set(TEST_SOURCES
     G4UniformRandTest.cc
     G4PhysicalConstantsTest.cc
     EngineTest.cc
+    EngineMinimalTest.cc
 
     G4BoxTest.cc
     G4ThreeVectorTest.cc
