working out how to make PPM screenshots in reusable manner, plus add some notes on debugging build issues

--- a/oglrap/CMakeLists.txt
+++ b/oglrap/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCES
 
     G.cc
     Frame.cc
+    Pix.cc
 
     Renderer.cc
     InstLODCull.cc
@@ -73,6 +74,8 @@ SET(HEADERS
 
     Texture.hh
     Frame.hh
+    Pix.hh
+
     Interactor.hh
     InteractorCfg.hh
     Scene.hh
