getting flightpath commands thru to the hub using SCtrl

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES
     FlightPath.cc
     OrbitalView.cc
     TrackView.cc
+    Ctrl.cc
 
     OpticksConst.cc
     OpticksQuery.cc
@@ -86,6 +87,7 @@ set(HEADERS
     FlightPath.hh
     OrbitalView.hh
     TrackView.hh
+    Ctrl.hh
 
     OpticksConst.hh
     OpticksQuery.hh
