refactor extract okc.RenderStyle from Scene, moving down from oglrap to lower level okc as not OpenGL specific

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -60,6 +60,7 @@ set(SOURCES
     Bookmarks.cc
     Composition.cc
     ContentStyle.cc
+    RenderStyle.cc
 
     Demo.cc
     DemoCfg.cc
@@ -127,6 +128,7 @@ set(HEADERS
     Bookmarks.hh
     Composition.hh
     ContentStyle.hh
+    RenderStyle.hh
 
     OpticksPhoton.h
     OpticksQuadrant.h
