remove CUDA_NVCC_FLAGS output from OKConfTest as they are now setup via OKConf TOPMATTER, so not defined within OKConf proj only by users of OKConf

--- a/okconf/CMakeLists.txt
+++ b/okconf/CMakeLists.txt
@@ -44,7 +44,7 @@ set(OKCONF_GEANT4_VERSION_INTEGER "${G4_VERSION_INTEGER}")
 set(OKCONF_OPTICKS_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
 
 set(OKCONF_COMPUTE_CAPABILITY_INTEGER "${COMPUTE_CAPABILITY}")
-set(OKCONF_CUDA_NVCC_FLAGS     "${CUDA_NVCC_FLAGS}")
+#set(OKCONF_CUDA_NVCC_FLAGS     "${CUDA_NVCC_FLAGS}")
 set(OKCONF_CMAKE_CXX_FLAGS     "${CMAKE_CXX_FLAGS}")
 
 
