--- a/okconf/OKConf_Config.hh.in
+++ b/okconf/OKConf_Config.hh.in
@@ -18,7 +18,7 @@
 
 #cmakedefine OKCONF_OPTICKS_INSTALL_PREFIX "@OKCONF_OPTICKS_INSTALL_PREFIX@"
 #cmakedefine OKCONF_OPTIX_INSTALL_DIR "@OKCONF_OPTIX_INSTALL_DIR@"
-#cmakedefine OKCONF_CUDA_NVCC_FLAGS   "@OKCONF_CUDA_NVCC_FLAGS@"
+// #cmakedefine OKCONF_CUDA_NVCC_FLAGS   "@OKCONF_CUDA_NVCC_FLAGS@"
 #cmakedefine OKCONF_CMAKE_CXX_FLAGS   "@OKCONF_CMAKE_CXX_FLAGS@"
 
 
