collateral changes from bringing 3d to swift in other repo

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TEST_SOURCES
     OpticksQueryTest.cc
     IndexerTest.cc
     CameraTest.cc
+    CameraSwiftTest.cc
     AnimatorTest.cc
     TrackballTest.cc
     OpticksEventSpecTest.cc
