disable G4 FPE detection in G4Opticks ctor as it breaks OptiX launches, observed with CerenkovMinimal when using debug Geant4 build on Linux, see notes/issues/OKG4Test_prelaunch_FPE_causing_fail.rst

--- a/opticksgl/tests/CMakeLists.txt
+++ b/opticksgl/tests/CMakeLists.txt
@@ -3,8 +3,18 @@ set(name OpticksGLTest)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)   
 
-set(TEST_SOURCES
+
+set(CHECK_SOURCES
     OOAxisAppCheck.cc
+)
+
+#[=[
+OOAxisAppCheck fails when run remotely on Linux with 
+X11: RandR gamma ramp support seems broken
+GLX: Forward compatibility requested but GLX_ARB_create_context_profile is unavailable
+#]=]
+
+set(TEST_SOURCES
 )
 
 foreach(SRC ${TEST_SOURCES})
