--- a/examples/UseCUDA/CMakeLists.txt
+++ b/examples/UseCUDA/CMakeLists.txt
@@ -1,6 +1,14 @@
+#[=[
 
+UseCUDA
+=========
+
+Makes a CUDA using library.  
+
+
+#]=]
 set(OKConf_VERBOSE ON)
-cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 set(name UseCUDA)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
