--- a/examples/UseUseCUDA/CMakeLists.txt
+++ b/examples/UseUseCUDA/CMakeLists.txt
@@ -1,8 +1,19 @@
+#[=[
+UseUseCUDA
+===========
+
+Configure the building of an executable that 
+uses the UseCUDA library
+
+#]=]
+
+
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name UseUseCUDA)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+set(OpticksCUDA_VERBOSE ON)
 find_package(UseCUDA 0.1.0 REQUIRED)
 
 echo_target_std(Opticks::UseCUDA)
