--- a/ok/CMakeLists.txt
+++ b/ok/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OK)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)  
+
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
  
 find_package(OpticksGL REQUIRED CONFIG)
 
