--- a/okg4/CMakeLists.txt
+++ b/okg4/CMakeLists.txt
@@ -3,6 +3,11 @@ set(name OKG4)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
 find_package(OK REQUIRED CONFIG)
 find_package(CFG4 REQUIRED CONFIG)
 
