--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -3,6 +3,13 @@ set(name OptiXRap)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)   
 
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
+
+
 find_package(OKConf     REQUIRED CONFIG)  
 
 set(OptiX_VERBOSE ON)
