--- a/thrustrap/CMakeLists.txt
+++ b/thrustrap/CMakeLists.txt
@@ -85,7 +85,7 @@ if(ThrustRap_VERBOSE)
 endif()
 
 
-install(TARGETS ${name} LIBRARY DESTINATION lib)
+#install(TARGETS ${name} LIBRARY DESTINATION lib)    see notes/issues/lib64-lib-install.rst
 install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
