update for OptiX_600

--- a/examples/UseOptiXBufferPP/CMakeLists.txt
+++ b/examples/UseOptiXBufferPP/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name UseOptiXProgramPP)
+set(name UseOptiXBufferPP)
 project(${name})
 include(OpticksBuildOptions)
 
@@ -11,6 +11,7 @@ endif()
 
 find_package(OKConf      REQUIRED CONFIG)   
 find_package(SysRap      REQUIRED CONFIG)
+find_package(NPY         REQUIRED CONFIG)
 
 find_package(OptiX       REQUIRED MODULE)   
 find_package(OpticksCUDA REQUIRED MODULE) 
@@ -20,7 +21,7 @@ set(SOURCES
 )
 
 set(OPTIX_SOURCES
-    basicTest.cu
+    bufferTest.cu
 )
 
 CUDA_WRAP_SRCS( ${name} PTX _generated_PTX_files ${OPTIX_SOURCES} )
@@ -28,7 +29,14 @@ CUDA_WRAP_SRCS( ${name} OBJ _generated_OBJ_files ${SOURCES} )
 
 add_executable( ${name} ${_generated_OBJ_files} ${_generated_PTX_files} ${SOURCES} )
 
-target_link_libraries(${name} PUBLIC Opticks::OptiX Opticks::OKConf Opticks::SysRap Opticks::CUDA )
+target_link_libraries(${name} 
+    PUBLIC 
+       Opticks::OptiX 
+       Opticks::CUDA
+       Opticks::OKConf 
+       Opticks::SysRap 
+       Opticks::NPY
+)
 
 install(FILES ${_generated_PTX_files} DESTINATION installcache/PTX)
 install(TARGETS ${name}  DESTINATION lib)
