down to 4 test FAILS with OptiX_600, after avoid crazies from rtuGetSizeForRTformat for RT_FORMAT_USER

--- a/examples/UseOptiX/CMakeLists.txt
+++ b/examples/UseOptiX/CMakeLists.txt
@@ -5,6 +5,7 @@ include(OpticksBuildOptions)
 
 set(OptiX_VERBOSE ON)
 find_package(OptiX MODULE QUIET)   
+find_package(OpticksCUDA  MODULE QUIET)   
 
 if(OptiX_FOUND)
     message(STATUS "OptiX_MODULE  : ${OptiX_MODULE} ")  
@@ -26,7 +27,11 @@ endif()
 
 #set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 add_executable(${name} ${name}.cc)
-target_link_libraries(${name} PUBLIC Opticks::OptiX)
+target_link_libraries(${name} 
+     PUBLIC 
+         Opticks::OptiX
+         Opticks::CUDA
+)
 install(TARGETS ${name}  DESTINATION lib)
 
 # to take this further, see /Developer/OptiX/SDK/CMakeLists.txt:OPTIX_add_sample_executable
