the tex fails were simply the setRayTypeCount again, so now there are 2 FAILs remaining : the double heavies

--- a/okconf/CMakeLists.txt
+++ b/okconf/CMakeLists.txt
@@ -24,6 +24,12 @@ does not work for OKConfTest ? But the above does::
 
    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) 
 
+
+On Linux could extract driver version
+
+    nvidia-smi --query-gpu=driver_version --format=csv,noheader
+    418.56
+
 #]=]
 
 set(OpticksCUDA_VERBOSE YES)
