--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_SOURCES
    SEnvTest.cc
    SSysTest.cc
    SStrTest.cc
+   SPathTest.cc
    STrancheTest.cc
    SVecTest.cc
    SMapTest.cc
