--- a/examples/UseShader/CMakeLists.txt
+++ b/examples/UseShader/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name UseOpticksGLFWShader)
+set(name UseShader)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
