matching GDML snippets direct from X4GDMLParser with ones from NNode/NSolid geometries converted to G4VSolid by CMaker::MakeSolid

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -37,6 +37,8 @@ set(TEST_SOURCES
     CGROUPVELTest.cc 
 
     CMakerTest.cc
+    CTreeJUNOTest.cc
+
     CPhotonTest.cc
     CRandomEngineTest.cc
     CAlignEngineTest.cc
