after fixing launch/prelaunch and using triangulated the timings are getting less perplexing

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -48,6 +48,8 @@ set(SOURCES
   BDir.cc
   BMap.cc
   Map.cc
+  BMeta.cc 
+
   BList.cc
   BStr.cc
   BHex.cc
@@ -91,6 +93,9 @@ set(HEADERS
   BDir.hh
   BMap.hh
   Map.hh
+  BMeta.hh
+
+
   BList.hh
   BStr.hh
   BHex.hh
