reposition npy/NParameters down to boostrap/BParameters according to dependencies

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -49,6 +49,7 @@ set(SOURCES
   BMap.cc
   Map.cc
   BMeta.cc 
+  BParameters.cc 
 
   BList.cc
   BStr.cc
@@ -94,6 +95,7 @@ set(HEADERS
   BMap.hh
   Map.hh
   BMeta.hh
+  BParameters.hh 
 
 
   BList.hh
