add optix::GeometryTriangles to optixrap/OGeo enabling triangle raytracing to benefit from the RT Cores on Turing GPUs with OptiX 6.0.0

--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -95,6 +95,7 @@ set(HEADERS
 set(CU_SOURCES
 
     cu/pinhole_camera.cu
+    cu/GeometryTriangles.cu
     cu/constantbg.cu
     cu/material1_radiance.cu 
     cu/material1_propagate.cu 
