--- a/examples/UseOpticksCUDA/CMakeLists.txt
+++ b/examples/UseOpticksCUDA/CMakeLists.txt
@@ -3,6 +3,11 @@ set(name UseOpticksCUDA)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
 set(FLAGS_VERBOSE ON) 
 set(OpticksCUDA_VERBOSE ON)
 
