get the profiling working again, must refrain from using dot in profile labels

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
     OpticksBufferSpecTest.cc
     OpticksActionControlTest.cc
 
+    OpticksProfileTest.cc
     OpticksIDPATH.cc
     OpticksPrepareInstallCache_OKC.cc
     OpticksAnaTest.cc
