generalize snap config, suspect near degenerate pyrex-in-pyrex is causing RTX performance inversion, geocache-j1808-v4-t1 creates simplified mm2 20-inch PMT with just LV 21, x4 performance and RTX does not hinder

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TEST_SOURCES
     OpticksFlagsTest.cc
     OpticksPhotonTest.cc
     OpticksCfgTest.cc
+    OpticksCfg2Test.cc
     OpticksTest.cc
     OpticksTwoTest.cc
     OpticksResourceTest.cc
