--- a/boostrap/tests/CMakeLists.txt
+++ b/boostrap/tests/CMakeLists.txt
@@ -13,6 +13,8 @@ set(TEST_SOURCES
 
    BListTest.cc
    BParametersTest.cc
+   BTxtTest.cc
+   BPropNamesTest.cc
 
    BHexTest.cc
    BRegexTest.cc
